# chipIFT

./: .gitignore  LICENSE  flake.nix  pyproject.toml  test.sh  tmp.v
config/: andor_1bit.json  c2670.json  condition_case.json  condition_if.json  fulladder.json  mux4to1.json  shift.json
scripts/: gencfg.sh  get_port_property.py
src/: __main__.py  ast_verilog.py  dfg_verilog.py  main.py  preprocess.py  preprocessor.py  run_yosys.py  utils.py
src/rules/: common.py  ift.py  rules.py
tests/: RTLgen.py  andor_1bit.json  config.json  example_controlflow_analyzer.py  example_dataflow_analyzer.py  generate.json  integration.py  parser.py  test.v  test_gencode.py  test_track_flow.py
verilogcode/: and.v  andor.v  andor_1bit.v  condition_case.v  condition_if.v  equality.v  fulladder.v  generate.v  logical.v  mux4to1.v  or.v  other_node.v  relational.v  shift.v  test.v  test2.v  test4.v  test5.v
verilogcode/c2670-T000/: c2670_T000.v  lib.v
